--- a/templates/home-layout.html.twig
+++ b/templates/home-layout.html.twig
@@ -7,7 +7,7 @@
         <nav class="navbar">
         <div class="container">
             <div class="navbar-brand">
-            <a class="navbar-item postal-brand">
+            <a class="navbar-item postal-brand" href="{{ path('app-home') }}">
                 CourierPO
             </a>
             <span class="navbar-burger burger" data-target="navbarMenuHeroB">
@@ -17,102 +17,9 @@
             </span>
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
-            <div class="navbar-end">
 
-            <div id="header-dropdown-button1" name="header-dropdown" class="dropdown navbar-item postal-button">
-                <div class="dropdown-trigger">
-                        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(1);">
-                        <span>Tracking</span>
-                        <span class="icon is-small">
-                            <i class="fas fa-angle-down" aria-hidden="true"></i>
-                        </span>
-                        </button>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                        <div class="dropdown-content">
-                            <a href="#" class="dropdown-item">
-                                Dropdown item
-                            </a>
-                            <a class="dropdown-item">
-                                Other dropdown item
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                Active dropdown item
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                Other dropdown item
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                With a divider
-                            </a>
-                        </div>
-                </div>
-            </div>
-            <div id="header-dropdown-button2" name="header-dropdown" class="dropdown navbar-item postal-button">
-                <div class="dropdown-trigger">
-                        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(2);">
-                        <span>Shipping</span>
-                        <span class="icon is-small">
-                            <i class="fas fa-angle-down" aria-hidden="true"></i>
-                        </span>
-                        </button>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                        <div class="dropdown-content">
-                            <a href="#" class="dropdown-item">
-                                Dropdown item
-                            </a>
-                            <a class="dropdown-item">
-                                Other dropdown item
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                Active dropdown item
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                Other dropdown item
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                With a divider
-                            </a>
-                        </div>
-                </div>
-            </div>
-            <div id="header-dropdown-button3" name="header-dropdown" class="dropdown navbar-item postal-button">
-                <div class="dropdown-trigger">
-                        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(3);">
-                        <span>Services</span>
-                        <span class="icon is-small">
-                            <i class="fas fa-angle-down" aria-hidden="true"></i>
-                        </span>
-                        </button>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                        <div class="dropdown-content">
-                            <a href="#" class="dropdown-item">
-                                Dropdown item
-                            </a>
-                            <a class="dropdown-item">
-                                Other dropdown item
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                Active dropdown item
-                            </a>
-                            <a href="#" class="dropdown-item">
-                                Other dropdown item
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                With a divider
-                            </a>
-                        </div>
-                </div>
-            </div>
-                <a class="navbar-item">
-                MyAccount
-                </a>
-            </div>
+                {% block navOptions %} {% endblock %}
+
             </div>
         </div>
         </nav>
@@ -124,4 +31,43 @@
 
 {% block javascripts %}
     <script src="js/dropdown.js"></script>
+{% endblock %}
+
+
+{% block footer %}
+
+    <footer>
+        <section class="section postal-support-ribbon">
+        <div class="container support">
+            <div class="subtitle">
+                Need help with a package?
+            </div>
+            <div class="support-container">
+                <div class="postal-support-button">Go to Support</div>
+            </div>
+        </div>
+        </section>
+
+
+        <div class="footer">
+            <div class="content container">
+            </div>
+        </div>
+        <div class="postal-copyright">
+            <div class="level container">
+                <div class="level-left">
+                    <div class="level-item">
+                        &copy; CourierPO 2019. All rights reserved. 
+                    </div>
+                </div>
+                <div class="level-right">
+                    <div class="level-item"><p><a>Terms of Use </a> |</p></div>
+                    <div class="level-item"><p><a>Privacy Notice </a> |</p></div>
+                    <div class="level-item"><a>Feedback</a></div>
+                </div>
+            </div>
+        </div>
+     </footer>
+
+
 {% endblock %}
