--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -1,5 +1,9 @@
 {%  extends 'home-layout.html.twig' %}
 
+{% block title %}
+{{ parent() }} | Login
+{% endblock %}
+
 
             {% block navOptions %}
                 <div class="navbar-end">
@@ -94,88 +98,54 @@
                                 </div>
                         </div>
                     </div>
-                    <a class="navbar-item" href="{{ path('app-login') }}">
-                    MyAccount
+                    <a class="navbar-item" href="{{ path('app-support') }}">
+                    Support
                     </a>
                 </div>
             {% endblock %}
 
 
 {% block body %}
-    <section class="hero is-dark is-large postal-bg-image">
-
-            {{ parent() }}
-
-        <div class="hero-body postal-bg-style">
-                <div class="container has-text-centered">
-                    <form>
-                    <div class="title">Track Your Package</div>
-                    <input class="package-track track-input" placeholder="Tracking number"/>
-                    <button class="package-track track-button">Track</button>
-                    </form>
-                </div>
-        </div>
-
+    <section class="hero is-dark postal-bg-image">
+        {{ parent() }}
     </section>
 
+    <section class="section is-large">
+        <div>
 
-      </section>
-    <section class="section">
-            <div class="container">
-            <div class="tile is-ancestor">
-        <div class="tile is-7 is-vertical is-parent">
-            <div class="tile is-child box postal-idea postal-idea-message">
-                <div class="title">
-                    Ready for Mother's Day?
+            <div class="columns is-mobile">
+            <div class="column is-4 is-offset-4 ">
+            
+                <div class="field">
+                <p class="control has-icons-left has-icons-right">
+                    <input class="input" type="email" placeholder="Email">
+                    <span class="icon is-small is-left">
+                    <i class="fas fa-envelope"></i>
+                    </span>
+                    <span class="icon is-small is-right">
+                    <i class="fas fa-check"></i>
+                    </span>
+                </p>
                 </div>
-                <div class="subtitle">
-                    Ship with CourierPO's affordable, reliable and fast shipping. <br/> Let us help you get your surprise, right on <bold>time</bold>.
+                <div class="field">
+                <p class="control has-icons-left">
+                    <input class="input" type="password" placeholder="Password">
+                    <span class="icon is-small is-left">
+                    <i class="fas fa-lock"></i>
+                    </span>
+                </p>
                 </div>
-            </div>
-        </div>
-        <div class="tile is-parent">
-            <div class="tile is-child box postal-idea postal-idea-image">
-            </div>
-        </div>
-            </div>
+                <div class="field">
+                <p class="control">
+                    <button class="button is-success">
+                    Login
+                    </button>
+                </p>
                 </div>
-    </section>
+            
+            </div>
+            </div>
 
-    <section class="section info">
-        <div class="container">
-            <div class="title">
-                Way More Than Just Shipping.
-            </div>
-            <div class="subtitle">
-            Explore ways to become more efficient, see printing offers and solutions, or<br/> get insights and inspiration for your small business.
-            </div>
-        </div>
-    </section>
-
-    
-    <section class="section info">
-        <div class="container">
-            <div class="tile is-ancestor">
-                    <div class="tile is-parent">
-                        <article class="tile is-child box">
-                        <p class="title">One</p>
-                        <p class="subtitle">Subtitle</p>
-                        </article>
-                    </div>
-                    <div class="tile is-parent">
-                        <article class="tile is-child box">
-                        <p class="title">Two</p>
-                        <p class="subtitle">Subtitle</p>
-                        </article>
-                    </div>
-                    <div class="tile is-parent">
-                        <article class="tile is-child box">
-                        <p class="title">Three</p>
-                        <p class="subtitle">Subtitle</p>
-                        </article>
-                    </div>
-                    </div>
         </div>
     </section>
-
 {% endblock %}
