--- a/templates/home-layout.html.twig
+++ b/templates/home-layout.html.twig
@@ -7,14 +7,14 @@
         <nav class="navbar">
         <div class="container">
             <div class="navbar-brand">
-            <a class="navbar-item postal-brand" href="{{ path('app-home') }}">
-                CourierPO
-            </a>
-            <span class="navbar-burger burger" data-target="navbarMenuHeroB">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
+                <a class="navbar-item postal-brand" href="{{ path('app-home') }}">
+                    Courier.PO
+                </a>
+                <span class="navbar-burger burger" data-target="navbarMenuHeroB">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
 
@@ -37,18 +37,6 @@
 {% block footer %}
 
     <footer>
-        <section class="section postal-support-ribbon">
-        <div class="container support">
-            <div class="subtitle">
-                Need help with a package?
-            </div>
-            <div class="support-container">
-                <div class="postal-support-button">Go to Support</div>
-            </div>
-        </div>
-        </section>
-
-
         <div class="footer">
             <div class="content container">
             </div>
