--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -1,7 +1,7 @@
 {%  extends 'home-layout.html.twig' %}
 
 {% block title %}
-{{ parent() }} | Login
+{{ parent() }} - Login
 {% endblock %}
 
 
@@ -19,21 +19,8 @@
                         </div>
                         <div class="dropdown-menu" id="dropdown-menu" role="menu">
                                 <div class="dropdown-content">
-                                    <a href="#" class="dropdown-item">
-                                        Dropdown item
-                                    </a>
-                                    <a class="dropdown-item">
-                                        Other dropdown item
-                                    </a>
-                                    <a href="#" class="dropdown-item">
-                                        Active dropdown item
-                                    </a>
-                                    <a href="#" class="dropdown-item">
-                                        Other dropdown item
-                                    </a>
-                                    <hr class="dropdown-divider">
-                                    <a href="#" class="dropdown-item">
-                                        With a divider
+                                    <a href="{{ path("app-track") }}" class="dropdown-item">
+                                        Track Your Package
                                     </a>
                                 </div>
                         </div>
@@ -49,21 +36,8 @@
                         </div>
                         <div class="dropdown-menu" id="dropdown-menu" role="menu">
                                 <div class="dropdown-content">
-                                    <a href="#" class="dropdown-item">
-                                        Dropdown item
-                                    </a>
-                                    <a class="dropdown-item">
-                                        Other dropdown item
-                                    </a>
-                                    <a href="#" class="dropdown-item">
-                                        Active dropdown item
-                                    </a>
-                                    <a href="#" class="dropdown-item">
-                                        Other dropdown item
-                                    </a>
-                                    <hr class="dropdown-divider">
-                                    <a href="#" class="dropdown-item">
-                                        With a divider
+                                    <a href="{{ path('app-ship-order') }}" class="dropdown-item">
+                                        Create A Package
                                     </a>
                                 </div>
                         </div>
@@ -71,7 +45,7 @@
                     <div id="header-dropdown-button3" name="header-dropdown" class="dropdown navbar-item postal-button">
                         <div class="dropdown-trigger">
                                 <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(3);">
-                                <span>Services</span>
+                                <span>Support &amp; Services</span>
                                 <span class="icon is-small">
                                     <i class="fas fa-angle-down" aria-hidden="true"></i>
                                 </span>
@@ -79,28 +53,12 @@
                         </div>
                         <div class="dropdown-menu" id="dropdown-menu" role="menu">
                                 <div class="dropdown-content">
-                                    <a href="#" class="dropdown-item">
-                                        Dropdown item
-                                    </a>
-                                    <a class="dropdown-item">
-                                        Other dropdown item
-                                    </a>
-                                    <a href="#" class="dropdown-item">
-                                        Active dropdown item
-                                    </a>
-                                    <a href="#" class="dropdown-item">
-                                        Other dropdown item
-                                    </a>
-                                    <hr class="dropdown-divider">
-                                    <a href="#" class="dropdown-item">
-                                        With a divider
+                                    <a href="{{ path('app-support') }}" class="dropdown-item">
+                                        Support
                                     </a>
                                 </div>
                         </div>
                     </div>
-                    <a class="navbar-item" href="{{ path('app-support') }}">
-                    Support
-                    </a>
                 </div>
             {% endblock %}
 
@@ -112,37 +70,39 @@
 
     <section class="section is-large">
         <div>
-
             <div class="columns is-mobile">
             <div class="column is-4 is-offset-4 ">
             
-                <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="email" placeholder="Email">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                    </span>
-                    <span class="icon is-small is-right">
-                    <i class="fas fa-check"></i>
-                    </span>
-                </p>
-                </div>
-                <div class="field">
-                <p class="control has-icons-left">
-                    <input class="input" type="password" placeholder="Password">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-lock"></i>
-                    </span>
-                </p>
-                </div>
-                <div class="field">
-                <p class="control">
-                    <button class="button is-success">
-                    Login
-                    </button>
-                </p>
-                </div>
-            
+                <a href="{{ path('app-home') }}">&lt; Back</a>
+                <form>
+                    <div class="field">
+                    <p class="control has-icons-left has-icons-right">
+                        <input class="input" type="email" placeholder="Email">
+                        <span class="icon is-small is-left">
+                        <i class="fas fa-envelope"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                        <i class="fas fa-check"></i>
+                        </span>
+                    </p>
+                    </div>
+                    <div class="field">
+                    <p class="control has-icons-left">
+                        <input class="input" type="password" placeholder="Password">
+                        <span class="icon is-small is-left">
+                        <i class="fas fa-lock"></i>
+                        </span>
+                    </p>
+                    </div>
+                    <div class="field">
+                    <p class="control">
+                        <button class="button is-success">
+                        Login
+                        </button>
+                    </p>
+                    </div>
+                </form>
+
             </div>
             </div>
 
