--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,10 @@ html, body {
     margin: 0 auto;
 }
 
+.portal {
+    background-color: #ffffff;
+}
+
 .postal-brand {
     font-size: 1.32em;
     font-weight: bold;
@@ -36,7 +40,7 @@ html, body {
 .package-track.track-input{
     width: 300px;
 }
-.package-track.track-button{
+.package-track.track-button, .field .control .postal-login-button {
     background-color: #00b388;
     color: #ffffff;
 }
@@ -94,7 +98,7 @@ html, body {
     font-size: 1.2rem;
 }
 
-.support .support-container .postal-support-button:hover {
+.support .support-container .postal-support-button:hover{
     background-color: #00b388;
 }
 
