--- a/templates/home-layout.html.twig
+++ b/templates/home-layout.html.twig
@@ -18,7 +18,106 @@
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
 
-                {% block navOptions %} {% endblock %}
+                {% block navOptions %} 
+                
+                <div class="navbar-end">
+
+                    <div id="header-dropdown-button1" name="header-dropdown" class="dropdown navbar-item postal-button is-right">
+                        <div class="dropdown-trigger">
+                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(1);">
+                                <span>Tracking</span>
+                                <span class="icon is-small">
+                                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                                </span>
+                                </button>
+                        </div>
+                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                                <div class="dropdown-content">
+                                    <a href="{{ path("app-track") }}" class="dropdown-item">
+                                        Track Your Package
+                                    </a>
+                                </div>
+                        </div>
+                    </div>
+                    <div id="header-dropdown-button2" name="header-dropdown" class="dropdown navbar-item postal-button is-right">
+                        <div class="dropdown-trigger">
+                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(2);">
+                                <span>Shipping</span>
+                                <span class="icon is-small">
+                                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                                </span>
+                                </button>
+                        </div>
+                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                                <div class="dropdown-content">
+                                    <a href="{{ path('app-ship-order') }}" class="dropdown-item">
+                                        Create A Package
+                                    </a>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="header-dropdown-button3" name="header-dropdown" class="dropdown navbar-item postal-button is-right">
+                        <div class="dropdown-trigger">
+                                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" onclick="drawDropdown(3);">
+                                <span>MyAccount</span>
+                                <span class="icon is-small">
+                                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                                </span>
+                                </button>
+                        </div>
+                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                                <div class="dropdown-content">
+
+                                    <div class="dropdown-item">
+                                        <p><b>Login</b></p>
+                                        <form>
+                                            
+
+<div class="field">
+  <p class="control has-icons-left has-icons-right">
+    <input class="input" type="email" placeholder="Email">
+    <span class="icon is-small is-left">
+      <i class="fas fa-envelope"></i>
+    </span>
+    <span class="icon is-small is-right">
+      <i class="fas fa-check"></i>
+    </span>
+  </p>
+</div>
+<div class="field">
+  <p class="control has-icons-left">
+    <input class="input" type="password" placeholder="Password">
+    <span class="icon is-small is-left">
+      <i class="fas fa-lock"></i>
+    </span>
+  </p>
+</div>
+<div class="field">
+  <p class="control">
+    <button class="button postal-login-button is-fullwidth">
+      Login
+    </button>
+  </p>
+</div>
+                                        </form>
+                                    </div>
+                                    <hr class="dropdown-divider">
+
+                                    <a href="{{ path('app-register') }}" class="dropdown-item">
+                                        Forgot Password
+                                    </a>
+
+                                    <hr class="dropdown-divider">
+
+                                    <a href="{{ path('app-register') }}" class="dropdown-item">
+                                        Register
+                                    </a>
+                                </div>
+                        </div>
+                    </div>
+                
+                {% endblock %}
 
             </div>
         </div>
@@ -27,12 +126,6 @@
     {% endblock %}
 
 {% endblock %}
-
-
-{% block javascripts %}
-    <script src="js/dropdown.js"></script>
-{% endblock %}
-
 
 {% block footer %}
 
@@ -58,4 +151,9 @@
      </footer>
 
 
+{% endblock %}
+
+
+{% block javascripts %}
+    <script src="js/dropdown.js"></script>
 {% endblock %}
