--- a/templates/home/track.html.twig
+++ b/templates/home/track.html.twig
@@ -20,15 +20,16 @@
             <div class="columns is-mobile">
             <div class="column is-4 is-offset-4 postal-track-ribbon">
             
+                {{ form_start(tracking) }}
+                    <div class="container has-text-centered">
+                        <div class="title">Enter a CourierPO tracking number.</div>
+                            <div class="package-track-form">
+                                {{ form_row(tracking.PackageID) }}
 
-                <div class="field">
-                    <form>
-                    <div class="subtitle">Enter a CourierPO tracking number.</div>
-                    <input class="package-track track-input" placeholder="Tracking number"/>
-                    <button class="package-track track-button">Track</button>
-                    </form>
-                </div>
-
+                                {{ form_row(tracking.Submit) }}
+                            </div>
+                    </div>
+                {{ form_end(tracking) }}
                             
             </div>
             </div>
@@ -38,8 +39,45 @@
 
     {% block trackResult %} 
     
-    <div>
-    </div>
+    <section class="section is-small tracking-history-result">
+        <div class="container">
+
+
+
+            <div>
+                <div class="subtitle">
+                    Tracking History
+                </div>
+
+                {% if data|length > 0 %}
+
+                    <div>
+
+                            {{ id }} - 
+                            {% if status|length > 0 %}
+
+                            {{ status[0].Status }}
+
+                            {% endif %}
+
+                    </div>
+
+                    {% for record in data %}
+                        <div>
+                            {{ record.Date }} -
+                            {{ record.Note }}
+                        </div>
+                        <br/><br/>
+                        
+                    {% endfor %}
+
+                {% else %}
+
+                {% endif %}
+            </div>
+
+        </div>
+    </section>
     
     {% endblock %}
 
