Added Footer; Added Employee Portal; Added Form code for Packages but still should be in login; Added recipient name for packages;

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,8 +5,9 @@ html, body {
     margin: 0 auto;
 }
 
-.portal {
+.portal-modal {
     background-color: #ffffff;
+    border-radius: 5px;
 }
 
 .postal-brand {
@@ -145,4 +146,10 @@ section.info div {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.footer-listing ul {
+    list-style: none;
+    font-size: 1.1em;
+    margin: 0;
 }
