--- a/templates/home-layout.html.twig
+++ b/templates/home-layout.html.twig
@@ -132,6 +132,32 @@
     <footer>
         <div class="footer">
             <div class="content container">
+
+
+<div class="columns">
+  <div class="column is-one-quarter footer-listing">
+      <ul>
+        <li style="font-weight: bold;">Helpful Links</li>
+        <li><a href="">Price Estimator</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">FAQs</a></li>
+    </ul>
+  </div>
+  <div class="column is-one-quarter footer-listing">
+      <ul  style="list-style: none; font-size: 1.1em;">
+        <li style="font-weight: bold;">Our Company</li>
+        <li><a href="">About CourierPO</a></li>
+        <li><a href="">Our Portfolio</a></li>
+        <li><a href="">Careers</a></li>
+        <li><a href="">NewsRoom</a></li>
+        <li><a href="{{ path('app-employee-login') }}" style="color: #2920ee">Employee Portal</a></li>
+    </ul>
+  </div>
+  <div class="column">
+  
+  </div>
+</div>
+
             </div>
         </div>
         <div class="postal-copyright">
