--- a/templates/home/order.html.twig
+++ b/templates/home/order.html.twig
@@ -77,100 +77,7 @@
 
     <section class="section is-small">
         <div class="container">
-        <div class="columns">
-
-            <div class="column is-three-quarters">
-
-            <form>
-
-                <label class="label">Return Address</label>
-                Street Address <input />
-
-                <br />
-
-                Apt <input/>
-
-                <br/>
-
-                City <input/>
-
-                <br/>
-                
-                State <select autocomplete="on" placeholder="State">
-                    <option hidden disabled selected value></option>
-                    {% for state in states %}
-                    <option value="{{ state }}"> {{ state }} </option>
-                    {% endfor %}
-                </select>
-
-                <br/>
-
-                ZipCode <input/>
-
-                <br/><br/>
-
-                <label class="label">Destination</label>
-                Street Address <input />
-
-                <br />
-
-                Apt <input/>
-
-                <br/>
-
-                City <input/>
-
-                <br/>
-                
-                State <select autocomplete="on" placeholder="State">
-                    <option hidden disabled selected value></option>
-                    {% for state in states %}
-                    <option value="{{ state }}"> {{ state }} </option>
-                    {% endfor %}
-                </select>
-
-                <br/>
-
-                ZipCode <input/>
-
-                <br/><br/>
-
-                <label class="label">Specifications</label>
-                Height<input/>
-                
-                <br/>
-
-                Width  <input/>
-
-                <br/>
-
-                Length <input/> 
-
-                <br/>
-
-                Weight <input/>
-                
-                <br/><br/>
-
-                Fragile? <input type="checkbox" value="fragile"/>
-
-                <br/><br/>
-                    
-                <div class="field-body">
-                    <div class="field">
-                    <div class="control">
-                        <button class="button is-primary">
-                        Submit
-                        </button>
-                    </div>
-                    </div>
-                </div>
-
-            </form>
-
-            </div>
-
-        </div>
+            {{ form(package) }}
         </div>
     </section>
 
