--- a/templates/home/portal.html.twig
+++ b/templates/home/portal.html.twig
@@ -21,32 +21,19 @@
             <div class="columns is-mobile">
             <div class="column is-4 is-offset-4 portal-modal">
 
-                <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                    <input class="input" type="email" placeholder="Employee ID">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                    </span>
-                    <span class="icon is-small is-right">
-                    <i class="fas fa-check"></i>
-                    </span>
-                </p>
-                </div>
-                <div class="field">
-                <p class="control has-icons-left">
-                    <input class="input" type="password" placeholder="Password">
-                    <span class="icon is-small is-left">
-                    <i class="fas fa-lock"></i>
-                    </span>
-                </p>
-                </div>
-                <div class="field">
-                <p class="control">
-                    <button class="button is-success">
-                    Login
-                    </button>
-                </p>
-                </div>
+                {{ form_start(portal) }}
+                    <div class="postal-login">
+                        <div>
+                            {{ form_row(portal.EmployeeID) }}
+                        </div>
+                        <div>
+                            {{ form_row(portal.Password) }}
+                        </div>
+                        <div>
+                            {{ form_row(portal.Submit) }}
+                        </div>
+                    </div>
+                {{ form_end(portal) }}
 
             </div>
             </div>
