--- a/templates/customer/dashboard.html.twig
+++ b/templates/customer/dashboard.html.twig
@@ -1,4 +1,4 @@
-{%  extends 'employee_layout.html.twig' %}
+{%  extends 'customer_layout.html.twig' %}
 
 {% block title %}
 {{ parent() }} - Dashboard
