--- a/templates/home-layout.html.twig
+++ b/templates/home-layout.html.twig
@@ -5,9 +5,8 @@
     {% block header %}
     <div class="hero-head postal-bg-style">
         <nav class="navbar">
-        <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item postal-brand" href="{{ path('app-home') }}">
+                <a class="navbar-item postal-brand" href="{{ path('app-main-page') }}">
                     Courier.PO
                 </a>
                 <span class="navbar-burger burger" data-target="navbarMenuHeroB">
@@ -85,12 +84,11 @@
                                     </a>
                                 </div>
                         </div>
-                    </div>
+                </div>
                 
                 {% endblock %}
 
             </div>
-        </div>
         </nav>
     </div>
     {% endblock %}
