--- a/templates/customer/profile.html.twig
+++ b/templates/customer/profile.html.twig
@@ -1,7 +1,7 @@
-{%  extends 'employee_layout.html.twig' %}
+{%  extends 'customer_layout.html.twig' %}
 
 {% block title %}
-{{ parent() }} - Dashboard
+{{ parent() }} - Account
 {% endblock %}
 
 
@@ -12,22 +12,29 @@
 
 {% block body %}
     {{ parent() }}
-    <section class="hero is-dark">
-    </section>
+    
+    <section class="hero">
+    </section>  
 
     <section class="section">
         <div class="container">
             <div class="subtitle">
-
+                
             </div>
         </div>
     </section>
 
     <section class="section is-small">
         <div class="container">
+        <div class="columns">
 
+            <div class="column is-three-quarters">
+
+
+            </div>
+            
+        </div>
         </div>
     </section>
-
-
+    
 {% endblock %}
