--- a/templates/employee_layout.html.twig
+++ b/templates/employee_layout.html.twig
@@ -2,7 +2,67 @@
 
 {% block body %}
 
-{{ id }} is a {{ type }}
+<nav class="navbar dashbar is-dark" role="navigation" aria-label="main navigation">
+<div class="container">
+  <div class="navbar-brand ">
+    <a class="navbar-item postal-brand">
+    Courier.PO
+    </a>
+
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" >
+        My Orders
+      </a>
+
+      <a class="navbar-item" href="">
+        Ship Package
+      </a>
+
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">
+          Actions
+        </a>
+
+        <div class="navbar-dropdown">
+          <a class="navbar-item">
+            About
+          </a>
+          <a class="navbar-item">
+            Jobs
+          </a>
+          <a class="navbar-item">
+            Contact
+          </a>
+          <hr class="navbar-divider">
+          <a class="navbar-item">
+            Report an issue
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button postal-button">
+            Profile
+          </a>
+
+          {{ form(logout) }}
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</nav>
 
 {% endblock %}
 
